<resources>
    <string name="app_name">Ordenes Partner</string>
    <string name="app_name_in_print_receipt">Ordenes</string>
    <string name="image" translatable="false">image</string>
    <string name="txt_completed">Completed</string>
    <string name="txt_ready_to_pick_up">Ready to pickup</string>
    <string name="txt_picked">Picked</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_forgotten_password">Forgotten Password?</string>
    <string name="new_password">New password</string>
    <string name="con_txt_password">Confirm new password</string>
    <string name="txt_remember">Show Password</string>
    <string name="txt_language">Change Language</string>
    <string name="txt_dont_have_account">Don\'t have an Account</string>
    <string name="txt_sign_up">Sign Up Now?</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_change">Change</string>
    <string name="process_failed_please_try_again">Process Failed, Please Try Again!</string>
    <string name="_retry">Retry</string>
    <string name="_retry_description">No internet connection.</string>
    <string name="error_email">Email is required!</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_password">Password must be between 4 and 20 characters!</string>
    <string name="error_confirm">Password confirmation does not match password!</string>
    <string name="error_confirm_password">Please enter your confirm password!</string>
    <string name="error_name">Name is required!</string>
    <string name="error">Something went wrong!</string>
    <string name="reg_personal_title">Personal info</string>
    <string name="reg_store_title">Restaurant info</string>
    <string name="reg_first_name_title">First Name</string>
    <string name="reg_last_name_title">Last Name</string>
    <string name="reg_email_title">E-mail</string>
    <string name="reg_mobile_no_title">Mobile number</string>
    <string name="reg_password_title">Password</string>
    <string name="reg_conform_pwd_title">Confirm password</string>
    <string name="reg_status">Status</string>
    <string name="reg_submit">Submit</string>
    <string name="register">Register Now</string>
    <string name="update">Update</string>
    <string name="reg_address">Address</string>
    <string name="please_allow_the_device_location_access">Please allow the device location access to proceed further.</string>
    <string name="reg_english_name_title">Restaurant Name</string>
    <string name="reg_arabic_name_title">Restaurant Name (Arabic)</string>
    <string name="reg_owner_title">Owner</string>
    <string name="reg_data_title">Data info</string>
    <string name="reg_preparing_title">Preparing Time For Pickup(in Minutes)</string>
    <string name="reg_Cuisine_title">Cuisine</string>
    <string name="reg_non_available_title">Pick non available dates</string>
    <string name="reg_payment_title">Payment Method</string>
    <string name="reg_pickup">Pick Up</string>
    <string name="reg_delivery">Delivery</string>
    <string name="reg_photo_title">Photos</string>
    <string name="reg_logo">Logo</string>
    <string name="reg_image_title">Image</string>
    <string name="reg_image_info_title">Images Info</string>
    <string name="reg_working_hours_title">Working Hours info</string>
    <string name="reg_days">Days</string>
    <string name="reg_working">Working</string>
    <string name="reg_from">From</string>
    <string name="reg_to">To</string>
    <string name="reg_sunday">Sunday</string>
    <string name="reg_monday">Monday</string>
    <string name="reg_tuesday">Tuesday</string>
    <string name="reg_wednesday">Wednesday</string>
    <string name="reg_thursday">Thursday</string>
    <string name="reg_friday">Friday</string>
    <string name="reg_saturday">Saturday</string>
    <string name="reg_time">Time</string>
    <string name="reg_hint_restaurant_name">Ex: Abc Restaurant</string>
    <string name="reg_hint_owner_name">Ex: John</string>
    <string name="reg_hint_email">Ex: John@gmail.com</string>
    <string name="reg_hint_mobile_number">Ex: +9719876543210</string>
    <string name="reg_hint_password">Ex: test@123</string>
    <string name="reg_hint_preparing_time">Ex: 30 Min</string>
    <string name="reg_first_name_error">First name should not be empty!</string>
    <string name="reg_last_name_error">Last name should not be empty!</string>
    <string name="reg_email_error">E-Mail Address does not appear to be valid!</string>
    <string name="reg_english_name_error">Name must be between 3 and 32 characters!</string>
    <string name="reg_arabic_name_error">Name must be between 3 and 32 characters!</string>
    <string name="reg_owner_error">Owner name must be between 3 and 64 characters!</string>
    <string name="reg_mobile_no_error">Mobile number should be valid!</string>
    <string name="reg_pwd_error">Password must be between 4 and 20 characters!</string>
    <string name="reg_confirm_pwd_error">Password and confirmation password do not match!</string>
    <string name="reg_address_error">Please provide a geo address!!</string>
    <string name="coupon_name">Coupon Name</string>
    <string name="coupon_code">Code</string>
    <string name="coupon_type">Type</string>
    <string name="coupon_discount">Discount</string>
    <string name="coupon_total_amount">Total Amount</string>
    <string name="coupon_products">Products</string>
    <string name="coupon_category">Category</string>
    <string name="coupon_date_start">Date Start</string>
    <string name="coupon_date_end">Date End</string>
    <string name="coupon_use_per_coupon">Uses Per Coupon</string>
    <string name="coupon_use_per_customer">Uses Per Customer</string>
    <string name="coupon_status">Status</string>
    <string name="btn_add">Add New</string>
    <string name="txt_add_coupon">Add Coupon</string>
    <string name="txt_edit_coupon">Edit Coupon</string>
    <string name="text_select">Please select</string>
    <string name="coupon_name_error">Coupon Name must be between 3 and 128 characters!</string>
    <string name="coupon_code_error">Coupon Code must be between 3 and 128 characters!</string>
    <string name="text_setting">Setting</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_logout">Logout</string>
    <string name="text_msg">Message</string>
    <string name="text_coupons">Coupons</string>
    <string name="text_section">Section</string>
    <string name="text_order">Orders</string>
    <string name="text_product">Product</string>
    <string name="txt_product_title">Products</string>
    <string name="txt_account_title">Account</string>
    <string name="text_home">Home</string>
    <string name="new_orders">New Orders</string>
    <string name="text_forget">Forget Password</string >
    <string name="text_category">Category</string>
    <string name="txt_sales">Sales</string>
    <string name="txt_balance">Balance</string>
    <string name="txt_total_orders">Total Orders</string>
    <string name="txt_total_sales">Total Sales</string>
    <string name="txt_total_completed_sales">Total Complete Sales</string>
    <string name="txt_total_products">Total Products</string>
    <string name="logout_message">Logout has been successfully.</string>
    <string name="title_activity_maps">Map</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="previous_order">Previous Order</string>
    <string name="customer_details">Customer Details</string>
    <string name="store_details">Store Details</string>
    <string name="order_details">Order Details</string>
    <string name="order_history">Order History Details</string>
    <string name="order_product">Order Product Details</string>
    <string name="order_total">Total</string>
    <string name="order_price">Price</string>
    <string name="order_name">Name</string>
    <string name="order_phone">Phone</string>
    <string name="order_date">Order Date</string>
    <string name="order_time">Time</string>
    <string name="order_type">Delivery Type</string>
    <string name="order_cmt">Comment</string>
    <string name="order_payment_type">Payment Type</string>
    <string name="order_address">Address</string>
    <string name="order_email">Email</string>
    <string name="order_payment">Payment Type</string>
    <string name="order_status">Status</string>
    <string name="order_Status">Order Status</string>
    <string name="order_order_type">Order Type</string>
    <string name="schedule">Schedule</string>
    <string name="order_non_veg_diner">Non Veg Dinners</string>
    <string name="order_veg_price">Veg Price</string>
    <string name="order_non_veg_price">Non Veg Price </string>
    <string name="order_total_price">Total Price </string>
    <string name="order_date_added">Date Added </string>
    <string name="order_comment">Comment </string>
    <string name="order_add_history">Add History</string>
    <string name="order_manage_status">Manage Status</string>
    <string name="order_notify">Notify Customer</string>
    <string name="order_add_status">Add Order Status</string>
    <string name="or_empty">No order so far.Continue shopping.</string>
    <string name="txt_bill_details">Bill Details</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_total">Total</string>
    <string name="sorry">Sorry !</string>
    <string name="empty">OrderList is empty</string>
    <string name="no_new_order">There is no new order.</string>
    <string name="empty_user">Lista użytkowników jest pusta</string>
    <string name="report_order_id">Order ID</string>
    <string name="report_customer">Customer</string>
    <string name="report_phone">Phone No</string>
    <string name="report_status">Status</string>
    <string name="report_cuisine">Cuisine</string>
    <string name="report_total_diners">Total Diners</string>
    <string name="report_order_date">Order Date</string>
    <string name="report_order_booking_date">Booking Date</string>
    <string name="report_order_amount">Order Amount</string>
    <string name="txt_today_total_title">Today</string>
    <string name="txt_week_total_title">This Week</string>
    <string name="txt_month_total_title">This Month</string>
    <string name="txt_total_title">Total</string>
    <string name="txt_total_order_title">No. of Orders</string>
    <string name="txt_total_cost_title">Cost</string>
    <string name="text_signup">Sign up</string>
    <string name="text_order_list">Order List</string>
    <string name="text_order_info">Order Info</string>
    <string name="text_edit_store">Edit Store</string>
    <string name="coupon_empty">No Coupon list.</string>
    <string name="section_empty">No Section list.</string>
    <string name="option_empty">No Option list.</string>
    <string name="section_name">Category Name</string>
    <string name="Section_Name">Category Name<font color='red'>*</font></string>
    <string name="txt_option_title">Options</string>
    <string name="assign_order">Order Assign</string>
    <string name="txt_report_title">Reports</string>
    <string name="txt_report_order">Order Reports</string>
    <string name="txt_report_shipping">Shipping</string>
    <string name="txt_report_commission">Commission</string>
    <string name="txt_report_product">Products</string>
    <string name="txt_report_most_purchased">Most Purchased</string>
    <string name="busy">Busy</string>
    <string name="open">Open</string>
    <string name="support">Support</string>
</resources>